# Step

./: .gitignore  .justfile  CMakeLists.txt  conanfile.py  conanfile.txt
.github/workflows/: test.yml
StepEngine/: .clang-format  .clang-tidy  CMakeLists.txt
StepEngine/include/GameEngine/: Defs.h  Game.h
StepEngine/include/Interpreter/: Defs.h  Exception.h  Interpreter.h  Invocation.h  Loop.h  Runtime.h  StackFrame.h
StepEngine/include/Parser/: DataParser.h  Defs.h  Exception.h  Level.h
StepEngine/include/StepLang/: StepLangBaseVisitor.h  StepLangLexer.h
StepEngine/src/: CMakeLists.txt
StepEngine/src/GameEngine/: CMakeLists.txt  Game.cpp
StepEngine/src/Interpreter/: Runtime.cpp
StepEngine/src/Parser/: CMakeLists.txt  DataParser.cpp
StepEngine/src/StepLang/: CMakeLists.txt  StepLangBaseListener.cpp  StepLangBaseVisitor.cpp  StepLangLexer.cpp  StepLangListener.cpp  StepLangParser.cpp  StepLangVisitor.cpp
StepEngine/test/: CMakeLists.txt  ParserTest.cpp
StepEngine/test/data/: test.level
StepTUI/: CMakeLists.txt  main.cpp
cmake/: Conan.cmake
configs/: FileParser.gdns  Interpreter.gdns  stepengine.gdnlib
grammars/: GenerateStepLang.sh  StepLang.g4
include/GDNative/: GDFileParser.h  GDInterpreter.h
include/Interpreter/: Defs.h  Evaluator.h  Exception.h  Function.h  Interpreter.h  Invocation.h  Loop.h  Runtime.h  StackFrame.h
include/Parser/: DataParser.h  Defs.h  Exception.h  Level.h
include/StepLang/: StepLangBaseListener.h  StepLangBaseVisitor.h  StepLangLexer.h  StepLangListener.h  StepLangParser.h  StepLangVisitor.h
src/: CMakeLists.txt
src/GDNative/: GDFileParser.cpp  GDInterpreter.cpp  GDLibrary.cpp
src/Interpreter/: CMakeLists.txt  Evaluator.cpp  Interpreter.cpp  Runtime.cpp
src/Parser/: DataParser.cpp
src/StepLang/: CMakeLists.txt  StepLangBaseListener.cpp  StepLangBaseVisitor.cpp  StepLangLexer.cpp  StepLangListener.cpp  StepLangParser.cpp  StepLangVisitor.cpp
test/: CMakeLists.txt  InterpreterTest.cpp  ParserTest.cpp
